<resources>
    <string name="app_name">Shop Now</string>
    <string name="next">Next</string>
    <string name="skip"><![CDATA[Skip >]]></string>

    <string name="home_accesseries_title">Home Accessories</string>
    <string name="home_accesseries_middle">Easy to find home materials</string>
    <string name="home_accesseries_discription">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>

    <string name="cloths_accesseries_title">Cloths</string>
    <string name="cloths_accesseries_middle">What is your style</string>
    <string name="cloths_accesseries_discription">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et</string>

    <string name="mobile_accesseries_title">Mobile Accessories</string>
    <string name="mobile_accesseries_middle">Need new phone, don\'t worry</string>
    <string name="mobile_accesseries_discription">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et</string>

    <string name="start">Start</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="based_on_your_recent_search">Based On Your Recent Search</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="colors">Colors</string>
    <string name="buy_now">Buy Now</string>
    <string name="welcome">Welcome</string>
    <string name="create_account">Create Account.</string>
    <string name="new_to_shop_now">New to Shop Now?</string>
    <string name="login">Login.</string>
    <string name="already_a_customer">Already a customer?</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="password_must_be_at_least_6_characters">Password must be at least 6 characters.</string>
    <string name="otp_message">We will send you an One Time Password on this mobile number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="create_account1">Create Account</string>
    <string name="login1">Login</string>
    <string name="no_product_is_available_in_your_cart">No Product is available in your cart</string>
    <string name="end_of_the_cart_items">End of the cart items</string>

</resources>