<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/_10sdp">
        <TextView
            android:id="@+id/topHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_accesseries_title"
            android:textColor="@color/white"
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="@dimen/_16ssp"/>

        <ImageView
            android:id="@+id/picture"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:src="@drawable/basketpic"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/lowerHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_accesseries_middle"
            android:textColor="@color/white"
            android:fontFamily="@font/ubuntu_regular"
            android:textSize="@dimen/_16ssp"/>
        <TextView
            android:id="@+id/discription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_accesseries_middle"
            android:textColor="@color/white"
            android:fontFamily="@font/ubuntu_regular"
            android:textSize="@dimen/_12ssp"/>
    </LinearLayout>
</RelativeLayout>