<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AccountFragment"
    android:background="@color/colorPrimary">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/welcome"
        android:textSize="@dimen/_18ssp"
        android:fontFamily="@font/ubuntu_medium"
        android:layout_margin="@dimen/_10sdp"/>
    
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:padding="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:elevation="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_50sdp"
        app:cardCornerRadius="@dimen/_8sdp">
        <RadioGroup
            android:id="@+id/accountRG"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:checkedButton="@id/loginAccountRB">
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/createAccountRB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/black"
                android:fontFamily="@font/ubuntu_bold"
                android:background="@color/dividerColor"/>
            <LinearLayout
                android:id="@+id/createAccountLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/dividerColor"
                android:visibility="gone">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/customerNameET"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/name"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/holo_blue_light"
                    android:textSize="@dimen/_13ssp"
                    android:padding="@dimen/_6sdp"
                    android:layout_margin="@dimen/_6sdp" />
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/customerNumberET"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/mobile_number"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/holo_blue_light"
                    android:textSize="@dimen/_13ssp"
                    android:padding="@dimen/_6sdp"
                    android:layout_margin="@dimen/_6sdp"/>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/customerEmailET"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/holo_blue_light"
                    android:textSize="@dimen/_13ssp"
                    android:padding="@dimen/_6sdp"
                    android:layout_margin="@dimen/_6sdp"/>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/customerPasswordET"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="Password"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/holo_blue_light"
                    android:textSize="@dimen/_13ssp"
                    android:padding="@dimen/_6sdp"
                    android:layout_margin="@dimen/_6sdp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_must_be_at_least_6_characters"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_6sdp"/>
            </LinearLayout>
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/loginAccountRB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/black"
                android:fontFamily="@font/ubuntu_bold"
                android:background="@color/dividerColor"/>
            <LinearLayout
                android:id="@+id/loginAccountLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/dividerColor"
                android:visibility="gone">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/customerLoginNumberET"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/mobile_number"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/holo_blue_light"
                    android:textSize="@dimen/_13ssp"
                    android:padding="@dimen/_6sdp"
                    android:layout_margin="@dimen/_6sdp" />
            </LinearLayout>
        </RadioGroup>
    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>