<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.OTPFragment"
    android:background="@color/colorPrimary">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:padding="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:elevation="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_50sdp"
        app:cardCornerRadius="@dimen/_8sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_verification"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:fontFamily="@font/ubuntu_medium"
                android:textSize="@dimen/_16ssp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_the_otp_sent_to"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:textSize="@dimen/_12ssp" />
            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:textSize="@dimen/_12ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp">
                <EditText
                    android:id="@+id/inputCode1"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:gravity="center"
                    android:maxLength="1"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_24sdp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:backgroundTint="@color/dividerColor"
                    tools:ignore="LabelFor" />
                <EditText
                    android:id="@+id/inputCode2"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:gravity="center"
                    android:maxLength="1"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_24sdp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:backgroundTint="@color/dividerColor"
                    tools:ignore="LabelFor" />
                <EditText
                    android:id="@+id/inputCode3"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:gravity="center"
                    android:maxLength="1"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_24sdp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:backgroundTint="@color/dividerColor"
                    tools:ignore="LabelFor" />
                <EditText
                    android:id="@+id/inputCode4"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:gravity="center"
                    android:maxLength="1"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_24sdp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:backgroundTint="@color/dividerColor"
                    tools:ignore="LabelFor" />
                <EditText
                    android:id="@+id/inputCode5"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:gravity="center"
                    android:maxLength="1"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_24sdp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:backgroundTint="@color/dividerColor"
                    tools:ignore="LabelFor" />
                <EditText
                    android:id="@+id/inputCode6"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:gravity="center"
                    android:maxLength="1"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_24sdp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:backgroundTint="@color/dividerColor"
                    tools:ignore="LabelFor" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/didn_t_receive_the_otp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/ubuntu_regular"
                    android:layout_marginEnd="@dimen/_2sdp"
                    android:textSize="@dimen/_12ssp"/>
                <TextView
                    android:id="@+id/resentOTP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resend_otp"
                    android:textColor="@android:color/holo_red_light"
                    android:fontFamily="@font/ubuntu_medium"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:textSize="@dimen/_12ssp"/>
            </LinearLayout>

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/verifyOTPButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_otp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/_5sdp"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>