<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.ProductDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/detailProductQRCode"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_250sdp"
            android:layout_gravity="center"
            android:elevation="@dimen/_minus56sdp"
            android:visibility="invisible"
            app:riv_corner_radius="@dimen/_10sdp" />

        <ImageView
            android:id="@+id/cartImage"
            android:layout_width="@dimen/_25ssp"
            android:layout_height="@dimen/_25sdp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/_3sdp"
            android:elevation="@dimen/_6sdp"
            android:onClick="imageClick"
            android:src="@drawable/ic_cart"
            app:tint="@color/cartColor" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary">

                    <com.smarteist.autoimageslider.SliderView
                        android:id="@+id/detailProductImages"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_400sdp"
                        app:sliderAnimationDuration="600"
                        app:sliderAutoCycleDirection="right"
                        app:sliderAutoCycleEnabled="true"
                        app:sliderIndicatorAnimationDuration="600"
                        app:sliderIndicatorGravity="center_horizontal|bottom"
                        app:sliderIndicatorMargin="15dp"
                        app:sliderIndicatorMarginBottom="@dimen/_35sdp"
                        app:sliderIndicatorOrientation="horizontal"
                        app:sliderIndicatorPadding="3dp"
                        app:sliderIndicatorRadius="2dp"
                        app:sliderIndicatorSelectedColor="@color/colorPrimaryDark"
                        app:sliderIndicatorUnselectedColor="@color/colorPrimary"
                        app:sliderScrollTimeInSec="3"
                        app:sliderStartAutoCycle="true" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_alignBottom="@id/detailProductImages"
                        android:background="@drawable/view_white" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_minus3sdp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/_50sdp">

                    <TextView
                        android:id="@+id/detailProductName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_bold"
                        android:paddingHorizontal="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18ssp" />

                    <TextView
                        android:id="@+id/detailProductBrand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_medium"
                        android:paddingHorizontal="@dimen/_5sdp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_15ssp" />

                    <TextView
                        android:id="@+id/detailProductDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_regular"
                        android:paddingHorizontal="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/ubuntu_medium"
                        android:paddingHorizontal="@dimen/_5sdp"
                        android:text="@string/colors"
                        android:textColor="@color/cartColor"
                        android:textSize="@dimen/_12ssp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/detailProductColorsRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_5sdp" />

                    <TextView
                        android:id="@+id/detailProductPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/ubuntu_medium"
                        android:paddingHorizontal="@dimen/_5sdp"
                        android:textColor="@color/priceColor"
                        android:textSize="@dimen/_15ssp" />

                    <LinearLayout
                        android:id="@+id/shareButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/share_button_bg"
                        android:orientation="horizontal"
                        android:padding="@dimen/_5sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/ubuntu_medium"
                            android:text="@string/share_now"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_16ssp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:scaleX="-1"
                            android:src="@drawable/ic_share" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/addToCartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:background="@drawable/progress_button_background"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/add_to_cart"
            android:textColor="@color/white" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buyNowButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:layout_toEndOf="@id/addToCartButton"
            android:background="@drawable/progress_button_background_buy"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/buy_now"
            android:textColor="@color/white" />
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>